@startuml
title: Event Factory Pattern
skinparam classAttributeIconSize 0


class Main_Controller{

- loggedUser : User
- instance : Main_Controller
- preferences : List<Category>
+ getinstance()  : Main_Controller
 +editEventPage(eid : int, newContent : Content) : void
 +customizeEventPage(organizerId: int, eid : int, details :String) :boolean
 +register(email :String, name :String, password :String ) : boolean
 +requestEvents()
 +registerEvent(eid : String, attendee: User) : boolean
 +requestPreferences()
 +addPreferences(pref : Category) : boolean
 +createEvent(name:String, startDate:Date, endDate:Date, startTime: Time, endTime:Time)
 +finishEvent(eid:String)
 +uploadPromotionalContent(eid : Int, content : File) : boolean
 -requestFeedback() : void
 +completeReview()
 +joinChatroom(eid : Int, user : User) : boolean
 +chat(eid : Int, user : User, message : String) : boolean
 +browseEvent(filteringDetails)
 +sendNewsletter()
}


class Promotional_Content{
    - file_path : String
    - updloaded_at : Date
}



class Event_Content{
    - posts : Map<Date, String>
}
class Event_Agenda{
    - timeSlots: Map<Time, String> |
}






class Event_Catalog {
- instance : Event_Catalog
+ getinstance()  : Event_Catalog
- findEvent(eid : Int) : Event
+requestEvents() : List<Event>
+add(attendee: User, eid : Int) : boolean
+createEvent(name:String, startDate:Date, endDate:Date, startTime: Time, endTime:Time) : Event
+addEvent(event : Event) : boolean
+createReport(eid : Int) : void
+downloadPromotionalContent(eid :Int): boolean
+registrerToEvent(eid:Int, user:User) : boolean
+removeParticipant(eid:Int, user:User) : boolean
+joinChatroom(eid : Int, user : User) : boolean
+isParticipant(eid : Int, user : User) : boolean
+filterEvents(eventDetails) : List<Event>
}

class Event {
{static} eventT_TDG : Event_TDG
- eid : int
- title : String
- description  : String 
- date : Date
- location : String
- category : Category
- type :EventType
- organizer: String
+setPageContent(newContent : String) : void
+updatePage(description:String) : boolean
+addContent(newcontent :String) : void
+toString() : String
+createReport() : boolean
+addReport(report :Report) : boolean
+viewEventPromotional() : boolean
+downloadPromotionalContent() : boolean
+joinChatroom(user : User) : boolean 
+getCategory() : Category
}

class Event_TDG{
    + getLatest(): int
     + addEvent(event: Event): void
     + getEvents() : List<Event>

}
class Event_Factory{
     + createEvent(...): boolean
}





class Event_Detail{
    - sponsorInfo: String
    - speakerInf :  String
}






'Promotion

Main_Controller  -->"1"Event_Catalog



'Event
Event_Catalog *-- Event
Event_Catalog -->"1"Event_Factory
Event_Factory ..>Event
Event -->"1"Event_Agenda
Event -->"1"Event_TDG
Event -->"1"Event_Detail
Event -->"1..*"Event_Content



'attendees and events' 


Event -->"1"Promotional_Content
'reporting

@enduml
